# NeuraDEX

./: README.md  SETUP.md  requirements.txt
agents/: coordinator_agent.py  execution_agent.py  risk_agent.py  yield_agent.py
aiml/: .env  AGENT_STATUS_REPORT.md  agent1q2va6ctcah_data.json  agent1qf889ut7vn_data.json  agent1qwqyrqc2c0_data.json  debug_metta.py  get_addresses.py  pyproject.toml  test_agent_communication.py  test_agent_status.py  test_simple.py
aiml/acceptance/: test_comprehensive.py  test_end_to_end.py  test_local_communication.py  test_risk_reasoning.py
aiml/agents/discovery_agent/: agent.manifest.json
aiml/agents/discovery_agent/src/: main.py
aiml/agents/execution_agent/: agent.manifest.json
aiml/agents/execution_agent/src/: main.py
aiml/agents/orchestrator_agent/: agent.manifest.json
aiml/agents/orchestrator_agent/src/: main.py
aiml/agents/risk_agent/: agent.manifest.json
aiml/agents/risk_agent/src/: main.py
aiml/agents/yield_agent/: agent.manifest.json
aiml/agents/yield_agent/src/: main.py
aiml/infra/: Dockerfile.agent  docker-compose.yml
aiml/metta/rules/: risk_rules.metta
aiml/scripts/: start_agents.sh
backend/: agent_router.py  app.py
infra/: .env
metta_engine/: metta_shim.py  rules.json
scripts/: run_all.sh
